PCS BAckup 26Dec2023/Backup-Source/objects/GCP_SFDC_Indirect_Sales__c.object
<CustomObject>
    <fields>
        <fullName>External_Date__c</fullName>
        <formula>DATE(VALUE(RIGHT(Vision_Month__c,4)),VALUE(LEFT(Vision_Month__c,2)),01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GCP_Update_Date__c</fullName>
        <label>GCP Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP SFDC Indirect Sales</relationshipLabel>
        <relationshipName>GCP_SFDC_Indirect_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_Description__c</fullName>
        <label>GCP Contract Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_External_ID__c</fullName>
        <label>GCP Contract External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_ID__c</fullName>
        <label>GCP Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_Sales_Indirect_Price__c</fullName>
        <label>GCP Contract Sales Indirect Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>GCP SFDC Indirect Sales</relationshipLabel>
        <relationshipName>GCP_SFDC_Indirect_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Contracts_Units_Paid_Qty__c</fullName>
        <label>GCP Contracts Units Paid Qty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Converion_UOM__c</fullName>
        <label>GCP Converion UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Conversion_Quantity__c</fullName>
        <label>GCP Conversion Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Internal_Batch_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used in handleLookupsFuncBatchCls. Using this field we are escaping already processed records from batch process</description>
        <label>Is Internal Batch Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Material_Description__c</fullName>
        <label>GCP Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Material_Number__c</fullName>
        <label>GCP Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Month_Text__c</fullName>
        <label>Month Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Month__c</fullName>
        <label>GCP Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_NDC__c</fullName>
        <label>GCP NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Paid_Charge_Back_Amount__c</fullName>
        <label>GCP Paid Charge Back Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP SFDC Indirect Sales</relationshipLabel>
        <relationshipName>GCP_SFDC_Indirect_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Settlement_Date_From__c</fullName>
        <label>GCP Settlement Date From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Settlement_Date_To__c</fullName>
        <label>GCP Settlement Date To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Settlement_Document_Category__c</fullName>
        <label>GCP Settlement Document Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_UOM__c</fullName>
        <label>GCP UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Update_Date__c</fullName>
        <label>Vision Update Date</label>
        <type>Date</type>
    </fields>
    <label>GCP SFDC Indirect Sales</label>
    <nameField>
        <displayFormat>Indirect-Sales-{00000}</displayFormat>
        <label>GCP SFDC Indirect Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP SFDC Indirect Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>